Oho, urler toimii :-)

--- a/urler.xhtml
+++ b/urler.xhtml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?> 
-<?xml-stylesheet title="Urler" href="urler.css" media="screen"?> 
+<?xml-stylesheet title="url style" href="urler.css" media="screen"?> 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"> 
 <head> 
 <title>urler</title> 
-<link rel="shortcut icon" type="image/png" href="../icon.png" />
+<link rel="shortcut icon" type="image/png" href="icon.png" />
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="urler.js"></script>
 </head> 
-<body id="debug">
-<ul id="list"></ul>
+<body>
+<h1>urler</h1>
 </body> 
 </html> 
