Reload-nappi pultattu ja toimii.

--- a/urler.xhtml
+++ b/urler.xhtml
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="urler.js"></script>
 </head> 
 <body>
-<h1>urler</h1>
+<h1>urler<span>&#8635;</span></h1>
 <table></table>
 </body> 
 </html> 
